postgres db and first table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/conference_app
-spring.datasource.username=postgres
-spring.datasource.password=Welcome
+spring.datasource.url=jdbc:postgresql://localhost:5432/nk_online_test
+spring.datasource.username=nk
+spring.datasource.password=nkPassword
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.show-sql=true
